# blog

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pelicanconf.py  publishconf.py  pyproject.toml  tasks.py
content/: apple-ii-monitor.md  bge-table-1.md  blog-modernizing.md  debian-router-2.md  debian-router-3.md  debian-router-4.md  debian-router-5.md  debian-router-6.md  debian-router-7.md  debian-router.md  magit-jetbrains.md
content/pages/: gpg.md
