[tool.poetry]
name = "jims-blog"
version = "0.1.0"
description = ""
authors = ["Jim Pudar"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = {extras = ["Markdown"], version = "^4.2.0"}
markdown = "^3.2.1"
pillow = "^7.1.1"
piexif = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
