[tool.poetry]
name = "jims-blog"
version = "0.1.0"
description = ""
authors = ["Jim Pudar"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = {extras = ["Markdown"], version = "^4"}
markdown = "^3"
pillow = "^7"
piexif = "^1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
